--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
     <h1>Dylan Carl</h1>
     <img src="./images/Profile picture.jpg" height="150" alt="avatar">
-    <h3 >7309 S Saint Patrick St<br>
-    South Tampa, FL, 33616</h3>
-    <p>(321) 615-1233<br>
-    Dylanccarl98@gmail.com</p>
+    <h3 >XXXX S Saint Patrick St<br>
+    South Tampa, FL, XXXXX</h3>
+    <p>(XXX) 615-XXXX<br>
+    DylanccarlXX@gmail.com</p>
     
     <hr>
 
